--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   sa_students_db:
-    image: mysql
+    image: mysql:5.7.22
     ports:
       - "3306:3306"
     environment:
