--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
   password: arqui
-  host: students-db
+  host: sa_students_db
   socket: /var/run/mysql/mysqld.sock
 
 development:
