--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
 version: '2'
 services:
-  sa_students_db:
+  students-db:
     image: mysql:5.7.22
     ports:
       - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: arqui
-      MYSQL_USER: user
-      MYSQL_PASSWORD: arqui
-      MYSQL_DATABASE: sa_students_ms_development
-      MYSQL_HOST: sa_students_db
-  sa_students_ms:
+      MYSQL_ROOT_PASSWORD: 123
+      MYSQL_USER: arquisoft
+      MYSQL_PASSWORD: 123
+      MYSQL_DATABASE: students
+      MYSQL_HOST: students-db
+  students-ms:
     build: .
-    command: bash -c "sleep 40 && rm -f tmp/pids/server.pid && bundle exec rails db:migrate && bundle exec rails s -p 4000 -b '0.0.0.0'"
+    command: bash -c "sleep 40 && rm -f tmp/pids/server.pid && bundle exec rails db:create && bundle exec rails db:migrate && bundle exec rails s -p 4000 -b '0.0.0.0'"
     ports:
       - "4000:4000"
     depends_on:
-      - sa_students_db
+      - students-db
